[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/backgrounds/intro.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Welbut__.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/videos/fred_intro.ogv" type="VideoStream" id=3]
[ext_resource path="res://script/Intro.gd" type="Script" id=4]
[ext_resource path="res://ui/TransitionUI.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=4]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 31
font_data = ExtResource( 2 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intro" type="Sprite" parent="."]
position = Vector2( 638.917, 362.322 )
texture = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
margin_left = 657.897
margin_top = 548.991
margin_right = 878.897
margin_bottom = 620.991
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
visible = false
margin_left = 324.269
margin_top = 43.4696
margin_right = 887.269
margin_bottom = 678.47
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Credits"]
margin_right = 706.0
margin_bottom = 626.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
margin_left = 17.9594
margin_top = 6.73477
margin_right = 128.959
margin_bottom = 45.7348
custom_fonts/font = SubResource( 6 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Credits"]
margin_left = 10.9594
margin_top = 91.1495
margin_right = 573.959
margin_bottom = 172.149
custom_fonts/font = SubResource( 6 )
text = "Scenarios, UI, 3d Models, Development
                        -Joao Antonio Matiuzzi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseCredits" type="Button" parent="Credits"]
margin_left = 301.607
margin_top = 548.589
margin_right = 445.607
margin_bottom = 599.589
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Credits"]
margin_left = 13.0
margin_top = 218.0
margin_right = 576.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 6 )
text = "Fonts:
 - Wellbutrin
 - Vademecum
 Avaliable free:  https://www.1001fonts.com/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenCredits" type="Button" parent="."]
margin_left = 62.3496
margin_top = 625.394
margin_right = 206.35
margin_bottom = 676.394
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 3 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipButton" type="Button" parent="."]
margin_left = 1110.73
margin_top = 308.859
margin_right = 1254.73
margin_bottom = 359.859
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionUI" parent="." instance=ExtResource( 5 )]
margin_top = -2.24493
margin_bottom = -2.24493
[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="Credits/CloseCredits" to="." method="_on_CloseCredits_button_up"]
[connection signal="button_up" from="OpenCredits" to="." method="_on_OpenCredits_button_up"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="button_up" from="SkipButton" to="." method="_on_SkipButton_button_up"]
